--- a/ordertracking/templates/ordertracking/order_list.html
+++ b/ordertracking/templates/ordertracking/order_list.html
@@ -16,7 +16,7 @@
             <th class="id">ID</th>
             <th class="store">Store</th>
             <th class="order-id">Order ID</th>
-            <th class="shipping-nr">Shipping Number</th>
+            <th class="shipping-nr">Shipping #</th>
             <th class="brief">Brief</th>
             <th class="order-date">Ordered</th>
             <th class="shipping-date">Shipped</th>
@@ -29,25 +29,21 @@
     <tbody>
     {% for order in order_list %}
         <tr>
-            <td><a href="{{ order.get_absolute_url }}">{{ order.id }}</a></td>
-            <td>{{ order.store }}</td>
-            <td><a href="{{ order.get_order_url }}" target="_blank">{{ order.order_id }}</a></td>
+            <td class="id"><a href="{{ order.get_absolute_url }}">{{ order.id }}</a></td>
+            <td class="store">{{ order.store }}</td>
+            <td class="order-id"><a href="{{ order.get_order_url }}" target="_blank">{{ order.order_id }}</a></td>
             {% if order.shipping_nr %}
-                <td><a href="{{ order.get_shipping_url }}" target="_blank">{{ order.shipping_nr }}</a></td>
+                <td class="shipping-nr"><a href="{{ order.get_shipping_url }}" target="_blank">{{ order.shipping_nr }}</a></td>
             {% else %}
-                <td></td>
+                <td class="shipping-nr"></td>
             {% endif %}
-            <td>{{ order.brief }}</td>
-            <td>{{ order.order_date }}</td>
-            <td>{{ order.shipping_date|default:'' }}</td>
-            <td>{{ order.arrival_date|default:'' }}</td>
-            <td>{{ order.get_duration_days }}</td>
-            <td>{{ order.state }}</td>
-            {% if order.complete %}
-                <td class="text-success"><i class="fa fa-check"></i> complete</td>
-            {% else %}
-                <td class="text-danger"><i class="fa fa-times"></i> incomplete</td>
-            {% endif %}
+            <td class="brief">{{ order.brief }}</td>
+            <td class="order-date">{{ order.order_date }}</td>
+            <td class="shipping-date">{{ order.shipping_date|default:'' }}</td>
+            <td class="arrival_date">{{ order.arrival_date|default:'' }}</td>
+            <td class="duration">{{ order.get_duration_days }}</td>
+            <td class="state">{% include 'ordertracking/snippets/order_state.html' %}</td>
+            <td class="complete">{% include 'ordertracking/snippets/order_complete.html' %}</td>
         </tr>
     {% endfor %}
     </tbody>
