added edit button to list

--- a/ordertracking/static/ordertracking/css/order_list.css
+++ b/ordertracking/static/ordertracking/css/order_list.css
@@ -40,6 +40,11 @@ table#orderlist thead th.complete
     width: 85px;
 }
 
+table#orderlist thead th.edit
+{
+    width: 50px;
+}
+
 table#orderlist tbody td.complete span.label
 {
     width: 200px ! important;
