renamed arrival- to delivery date and added admin actions

--- a/ordertracking/static/ordertracking/css/order_list.css
+++ b/ordertracking/static/ordertracking/css/order_list.css
@@ -40,9 +40,9 @@ table#orderlist thead th.complete
     width: 85px;
 }
 
-table#orderlist thead th.edit
+table#orderlist thead th.actions
 {
-    width: 50px;
+    width: 55px;
 }
 
 table#orderlist tbody td.complete span.label
