--- a/toolbox/templates/toolbox/base.html
+++ b/toolbox/templates/toolbox/base.html
@@ -1,27 +1,6 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'toolbox/skeleton.html' %}
 
-        <title>{% block title %}{% endblock %} - Toolbox</title>
-
-        <link href="{% static 'toolbox/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/plugins/dataTables/css/dataTables.bootstrap.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/plugins/font-awesome/css/font-awesome.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/css/toolbox.css' %}" rel="stylesheet">
-
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="{% static 'toolbox/plugins/iefix/html5shiv.min.js' %}"></script>
-            <script src="{% static 'toolbox/plugins/iefix/respond.min.js' %}"></script>
-        <![endif]-->
-        {% block head %}{% endblock %}
-    </head>
-    <body>
+{% block body %}
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -44,6 +23,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ user }} <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     {% if user.is_staff %}
+                                        <li><a href="{% url 'password_change' %}"><i class="fa fa-lock"></i> Password Change</a></li>
                                         <li><a href="{% url 'admin:index' %}"><i class="fa fa-cogs"></i> Administration</a></li>
                                         <li><a href="{% url 'logout' %}"><i class="fa fa-power-off"></i> Logout</a></li>
                                     {% endif %}
@@ -60,12 +40,4 @@
         <div id="content" class="container-fluid">
         {% block content %}{% endblock %}
         </div>
-
-        <script src="{% static 'toolbox/plugins/jquery/jquery.js' %}"></script>
-        <script src="{% static 'toolbox/plugins/bootstrap/js/bootstrap.js' %}"></script>
-        <script src="{% static 'toolbox/plugins/dataTables/js/jquery.dataTables.js' %}"></script>
-        <script src="{% static 'toolbox/plugins/dataTables/js/dataTables.bootstrap.js' %}"></script>
-        <script src="{% static 'toolbox/js/toolbox.js' %}"></script>
-        {% block script %}{% endblock %}
-    </body>
-</html>
+{% endblock %}
