--- a/toolbox/templates/toolbox/skeleton.html
+++ b/toolbox/templates/toolbox/skeleton.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,10 +9,13 @@
 
         <title>{% block title %}{% endblock %} - Toolbox</title>
 
+        {% compress css %} 
         <link href="{% static 'toolbox/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
         <link href="{% static 'toolbox/plugins/dataTables/css/dataTables.bootstrap.css' %}" rel="stylesheet">
         <link href="{% static 'toolbox/plugins/font-awesome/css/font-awesome.css' %}" rel="stylesheet">
         <link href="{% static 'toolbox/css/toolbox.css' %}" rel="stylesheet">
+        {% block head %}{% endblock %}
+        {% endcompress %}
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,16 +23,17 @@
             <script src="{% static 'toolbox/plugins/iefix/html5shiv.min.js' %}"></script>
             <script src="{% static 'toolbox/plugins/iefix/respond.min.js' %}"></script>
         <![endif]-->
-        {% block head %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
 
+        {% compress js %}
         <script src="{% static 'toolbox/plugins/jquery/jquery.js' %}"></script>
         <script src="{% static 'toolbox/plugins/bootstrap/js/bootstrap.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/jquery.dataTables.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/dataTables.bootstrap.js' %}"></script>
         <script src="{% static 'toolbox/js/toolbox.js' %}"></script>
         {% block script %}{% endblock %}
+        {% endcompress %}
     </body>
 </html>
