--- a/toolbox/ordertracking/templates/ordertracking/snippets/order_complete.html
+++ b/toolbox/ordertracking/templates/ordertracking/snippets/order_complete.html
@@ -1,9 +1,9 @@
 {% if order.complete %}
-    <span class="label label-success">
+    <span class="label bg-green-meadow">
         <i class="fa fa-check"></i> complete
     </span>
 {% else %}
-    <span class="label label-danger">
+    <span class="label bg-red-sunglo">
         <i class="fa fa-spin fa-spinner"></i> incomplete
     </span>
 {% endif %}
