--- a/toolbox/toolbox/templates/toolbox/password_change_form.html
+++ b/toolbox/toolbox/templates/toolbox/password_change_form.html
@@ -1,10 +1,12 @@
-{% extends 'toolbox/base.html' %}
+{% extends 'toolbox/layout/base.html' %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block title %}Password Change{% endblock %}
 
-{% block content %}
+{% block page_title %}Password Change{% endblock %}
+
+{% block page_content %}
         <div class="row">
             <div class="col-md-offset-4 col-md-4">
                 {% crispy form %}
