--- a/toolbox/toolbox/templates/toolbox/layout/skeleton.html
+++ b/toolbox/toolbox/templates/toolbox/layout/skeleton.html
@@ -2,29 +2,34 @@
 {% load compress %}
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8" />
 
         <title>{% block title %}{% endblock %} - Toolbox</title>
 
-        {% compress css %} 
-        <link href="{% static 'toolbox/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/plugins/dataTables/css/dataTables.bootstrap.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/plugins/font-awesome/css/font-awesome.css' %}" rel="stylesheet">
-        <link href="{% static 'toolbox/css/toolbox.css' %}" rel="stylesheet">
-        {% block head %}{% endblock %}
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+        {% compress css %}
+        <link href="{% static 'toolbox/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/plugins/dataTables/css/dataTables.bootstrap.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/plugins/font-awesome/css/font-awesome.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/plugins/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet" type="text/css">
+
+        <link href="{% static 'toolbox/layout/css/components-md.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/layout/css/plugins-md.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/layout/css/layout.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'toolbox/layout/css/theme.css' %}" rel="stylesheet" type="text/css">
+
+        <link href="{% static 'toolbox/layout/css/custom.css' %}" rel="stylesheet" type="text/css">
+        {% block css %}{% endblock %}
         {% endcompress %}
 
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="{% static 'toolbox/plugins/iefix/html5shiv.min.js' %}"></script>
-            <script src="{% static 'toolbox/plugins/iefix/respond.min.js' %}"></script>
-        <![endif]-->
+        <link rel="shortcut icon" href="favicon.ico" />
     </head>
-    <body>
+
+    <body class="page-container-bg-solid page-md">
         {% block body %}{% endblock %}
 
         {% compress js %}
@@ -32,8 +37,11 @@
         <script src="{% static 'toolbox/plugins/bootstrap/js/bootstrap.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/jquery.dataTables.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/dataTables.bootstrap.js' %}"></script>
-        <script src="{% static 'toolbox/js/toolbox.js' %}"></script>
-        {% block script %}{% endblock %}
+        <script src="{% static 'toolbox/layout/js/app.js' %}"></script>
+        <script src="{% static 'toolbox/layout/js/layout.js' %}"></script>
+        <script src="{% static 'toolbox/layout/js/custom.js' %}"></script>
         {% endcompress %}
+        {% block js %}{% endblock %}
     </body>
+
 </html>
