--- a/toolbox/toolbox/templates/toolbox/layout/skeleton.html
+++ b/toolbox/toolbox/templates/toolbox/layout/skeleton.html
@@ -10,7 +10,7 @@
 
         <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
         {% compress css %}
         <link href="{% static 'toolbox/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'toolbox/plugins/dataTables/css/dataTables.bootstrap.css' %}" rel="stylesheet" type="text/css">
