BUGFIX: JS error because of compressor

--- a/toolbox/toolbox/templates/toolbox/layout/skeleton.html
+++ b/toolbox/toolbox/templates/toolbox/layout/skeleton.html
@@ -32,9 +32,10 @@
     <body class="page-container-bg-solid page-md">
         {% block body %}{% endblock %}
 
+        {# WARNING: Do not compress bootstrap.js because django compressor doesn't like bootstrap! #}
+        <script src="{% static 'toolbox/plugins/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'toolbox/plugins/bootstrap/js/bootstrap.min.js' %}"></script>
         {% compress js %}
-        <script src="{% static 'toolbox/plugins/jquery/jquery.js' %}"></script>
-        <script src="{% static 'toolbox/plugins/bootstrap/js/bootstrap.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/jquery.dataTables.js' %}"></script>
         <script src="{% static 'toolbox/plugins/dataTables/js/dataTables.bootstrap.js' %}"></script>
         <script src="{% static 'toolbox/layout/js/app.js' %}"></script>
