--- a/toolbox/toolbox/templates/toolbox/layout/base.html
+++ b/toolbox/toolbox/templates/toolbox/layout/base.html
@@ -51,6 +51,9 @@
                             <div class="page-title">
                                 <h1>{% block page_title %}{% endblock %}</h1>
                             </div>
+                            <div class="page-toolbar">
+                                {% block page_toolbar %}{% endblock %}
+                            </div>
                         </div>
                     </div>
                     <div class="page-content">
