FEATURE: Updated mobile menu

--- a/toolbox/toolbox/static/toolbox/layout/css/custom.css
+++ b/toolbox/toolbox/static/toolbox/layout/css/custom.css
@@ -9,7 +9,7 @@ h2
 }
 
 /*
- * Set correct colors for page header.
+ * Set correct colors for page header and navigation.
  */
 
 .page-header .page-header-top .page-logo a,
@@ -28,6 +28,23 @@ h2
 {
     color: #a4b4bb;
     text-decoration: none;
+}
+
+.page-header .page-header-menu .hor-menu .navbar-nav > li:hover > a,
+.page-header .page-header-menu .hor-menu .navbar-nav > li:hover > a > i
+{
+    color: #1BBC9B ! important;
+}
+
+.page-header .page-header-menu .hor-menu .navbar-nav > li.open > a,
+.page-header .page-header-menu .hor-menu .navbar-nav > li.open > a:hover,
+.page-header .page-header-menu .hor-menu .navbar-nav > li.active > a,
+.page-header .page-header-menu .hor-menu .navbar-nav > li.active > a:hover,
+.page-header .page-header-menu .hor-menu .navbar-nav > li.current > a,
+.page-header .page-header-menu .hor-menu .navbar-nav > li.current > a:hover
+{
+    background-color: #1BBC9B ! important;
+    border-color: #1BBC9B;
 }
 
 /*
