FEATURE: Added create and update form for orders

--- a/toolbox/ordertracking/templates/ordertracking/order_detail.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_detail.html
@@ -1,6 +1,6 @@
 {% load markdownify %}
 
-<a href="{{ order.get_admin_url }}" class="btn dark pull-right">edit order</a>
+<a href="{{ order.get_absolute_url }}" class="btn dark pull-right">edit order</a>
 
 <h2><i class="icon-info"></i> Informations</h2>
 <div class="container-fluid">
