--- a/toolbox/ordertracking/templates/ordertracking/order_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_list.html
@@ -16,7 +16,7 @@ Order Tracking <small>List of orders</small>
 {% endblock %}
 
 {% block page_toolbar %}
-<a href="{% url 'admin:ordertracking_order_add' %}" target="_blank" class="btn green-meadow"><i class="fa fa-plus"></i> add new order</a>
+<a href="{% url 'ordertracking:create' %}" class="btn green-meadow"><i class="fa fa-plus"></i> add new order</a>
 {% endblock %}
 
 {% block page_content %}
@@ -64,7 +64,7 @@ Order Tracking <small>List of orders</small>
                                 <input type="checkbox" name="id[]" value="{{ order.id }}">
                             </td>
                             <td class="id">
-                                <a href="{{ order.get_absolute_url }}">{{ order.id }}</a>
+                                <a href="{{ order.get_absolute_url }}" data-modal-url="{% url 'ordertracking:modal' order.id %}">{{ order.id }}</a>
                             </td>
                             <td class="order-id">
                                 <a href="{{ order.get_order_url }}" target="_blank">{{ order.order_id }}</a>
