STYLE: Add new order button is now outlined

--- a/toolbox/ordertracking/templates/ordertracking/order_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_list.html
@@ -16,7 +16,7 @@ Order Tracking <small>List of orders</small>
 {% endblock %}
 
 {% block page_toolbar %}
-<a href="{% url 'ordertracking:create' %}" class="btn green-meadow"><i class="fa fa-plus"></i> add new order</a>
+<a href="{% url 'ordertracking:create' %}" class="btn btn-outline green-meadow"><i class="fa fa-plus"></i> add new order</a>
 {% endblock %}
 
 {% block page_content %}
